--- a/l8r_hell/l8r_hell/Base.lproj/Main.storyboard
+++ b/l8r_hell/l8r_hell/Base.lproj/Main.storyboard
@@ -24,14 +24,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FuT-NO-scR">
+                                <rect key="frame" x="0.0" y="115" width="320" height="320"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Inbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zS4-xK-r2c">
-                                <rect key="frame" x="50" y="20" width="43" height="21"/>
+                                <rect key="frame" x="5" y="20" width="43" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHs-kG-Wdw">
-                                <rect key="frame" x="50" y="49" width="111" height="30"/>
+                                <rect key="frame" x="5" y="49" width="111" height="30"/>
                                 <state key="normal" title="Back to Camera">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -44,6 +47,7 @@
                     </view>
                     <connections>
                         <outlet property="cameraButton" destination="RHs-kG-Wdw" id="6iZ-BJ-39g"/>
+                        <outlet property="theImageView" destination="FuT-NO-scR" id="xzf-Ep-rjM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aih-JM-JMr" userLabel="First Responder" sceneMemberID="firstResponder"/>
