--- a/l8r_hell/l8r_hell/Base.lproj/Main.storyboard
+++ b/l8r_hell/l8r_hell/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xeq-us-tLL">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Page View Controller-->
@@ -24,17 +25,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FuT-NO-scR">
-                                <rect key="frame" x="0.0" y="115" width="320" height="320"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FuT-NO-scR">
+                                <rect key="frame" x="0.0" y="0.0" width="460" height="610"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="460" id="Xtr-2w-WA3"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Inbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zS4-xK-r2c">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zS4-xK-r2c">
                                 <rect key="frame" x="5" y="20" width="43" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHs-kG-Wdw">
-                                <rect key="frame" x="5" y="49" width="111" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHs-kG-Wdw">
+                                <rect key="frame" x="16" y="570" width="111" height="30"/>
                                 <state key="normal" title="Back to Camera">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -44,6 +48,15 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zS4-xK-r2c" firstAttribute="top" secondItem="Qd6-Cx-njO" secondAttribute="bottom" id="9A2-6Z-9ik"/>
+                            <constraint firstItem="HbV-Hi-fo2" firstAttribute="top" secondItem="FuT-NO-scR" secondAttribute="bottom" constant="-10" id="RSP-OM-y0d"/>
+                            <constraint firstItem="FuT-NO-scR" firstAttribute="leading" secondItem="1o9-WB-W13" secondAttribute="leading" id="RWl-TB-X0B"/>
+                            <constraint firstItem="RHs-kG-Wdw" firstAttribute="bottom" secondItem="HbV-Hi-fo2" secondAttribute="top" id="VUJ-6E-ehD"/>
+                            <constraint firstItem="RHs-kG-Wdw" firstAttribute="leading" secondItem="1o9-WB-W13" secondAttribute="leadingMargin" id="XJv-ov-xIR"/>
+                            <constraint firstItem="FuT-NO-scR" firstAttribute="top" secondItem="1o9-WB-W13" secondAttribute="top" id="qW8-Ng-92D"/>
+                            <constraint firstItem="zS4-xK-r2c" firstAttribute="leading" secondItem="1o9-WB-W13" secondAttribute="leadingMargin" constant="-11" id="zwR-YB-1qO"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="cameraButton" destination="RHs-kG-Wdw" id="6iZ-BJ-39g"/>
