--- a/l8r_hell/l8r_hell/Base.lproj/Main.storyboard
+++ b/l8r_hell/l8r_hell/Base.lproj/Main.storyboard
@@ -31,12 +31,6 @@
                                     <constraint firstAttribute="width" constant="460" id="Xtr-2w-WA3"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zS4-xK-r2c">
-                                <rect key="frame" x="5" y="20" width="43" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHs-kG-Wdw">
                                 <rect key="frame" x="16" y="570" width="111" height="30"/>
                                 <state key="normal" title="Back to Camera">
@@ -46,21 +40,31 @@
                                     <action selector="cameraButtonTapped:" destination="av9-nU-x5p" eventType="touchUpInside" id="E6F-38-PHf"/>
                                 </connections>
                             </button>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="0PB-lX-Uzy">
+                                <rect key="frame" x="151" y="219" width="298" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="298" id="nqa-I1-WWi"/>
+                                </constraints>
+                                <date key="date" timeIntervalSinceReferenceDate="444695049.70360601">
+                                    <!--2015-02-03 22:24:09 +0000-->
+                                </date>
+                            </datePicker>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zS4-xK-r2c" firstAttribute="top" secondItem="Qd6-Cx-njO" secondAttribute="bottom" id="9A2-6Z-9ik"/>
+                            <constraint firstItem="0PB-lX-Uzy" firstAttribute="centerX" secondItem="1o9-WB-W13" secondAttribute="centerX" id="9Iq-ag-P68"/>
                             <constraint firstItem="HbV-Hi-fo2" firstAttribute="top" secondItem="FuT-NO-scR" secondAttribute="bottom" constant="-10" id="RSP-OM-y0d"/>
                             <constraint firstItem="FuT-NO-scR" firstAttribute="leading" secondItem="1o9-WB-W13" secondAttribute="leading" id="RWl-TB-X0B"/>
                             <constraint firstItem="RHs-kG-Wdw" firstAttribute="bottom" secondItem="HbV-Hi-fo2" secondAttribute="top" id="VUJ-6E-ehD"/>
+                            <constraint firstItem="0PB-lX-Uzy" firstAttribute="top" secondItem="Qd6-Cx-njO" secondAttribute="bottom" constant="199" id="WJ8-Em-rcd"/>
                             <constraint firstItem="RHs-kG-Wdw" firstAttribute="leading" secondItem="1o9-WB-W13" secondAttribute="leadingMargin" id="XJv-ov-xIR"/>
                             <constraint firstItem="FuT-NO-scR" firstAttribute="top" secondItem="1o9-WB-W13" secondAttribute="top" id="qW8-Ng-92D"/>
-                            <constraint firstItem="zS4-xK-r2c" firstAttribute="leading" secondItem="1o9-WB-W13" secondAttribute="leadingMargin" constant="-11" id="zwR-YB-1qO"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cameraButton" destination="RHs-kG-Wdw" id="6iZ-BJ-39g"/>
-                        <outlet property="theImageView" destination="FuT-NO-scR" id="xzf-Ep-rjM"/>
+                        <outlet property="datePicker" destination="0PB-lX-Uzy" id="rfK-RC-IHw"/>
+                        <outlet property="imageView" destination="FuT-NO-scR" id="GTO-Fl-wm8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aih-JM-JMr" userLabel="First Responder" sceneMemberID="firstResponder"/>
